--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <span class="mx-2 text-kategory">Kategory</span>
 
         <div class="wrap-search">
-          <input type="text" class=" form-control" placeholder="Temukan Barang">
+          <input type="text" class=" form-control" placeholder="Temukan Barang" data-toggle="modal"
+            data-target="#exampleModal">
           <div class="wrap-icont-search">
             <i class="icoSeacrh img-search icofont-search bg-light p-2"></i>
           </div>
         </div>
-
 
         <!-- img shop -->
         <div class="wrap-img-shop mx-3" onclick="menuBar()">
@@ -79,8 +79,72 @@
     </div>
   </section>
 
+  <div class="kategory">
+    <div id="head-category" class="head-kategory d-flex w-100">
+      <!-- list using React -->
+    </div>
 
 
+    <div class="row">
+      <div class="col-2">
+        <div class="head-left">
+          <h6 class="mb-0">Buku</h6>
+          <h6 class="mb-0">Elektronik</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+          <h6 class="mb-0">Dapur</h6>
+        </div>
+        <div class="col-10">
+          <div class="head-left"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ModalSearch -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content mc-head">
+        <div class="d-flex justify-content-between">
+          <span class="font-weight-bold title">Pencarian Terakhir</span>
+          <span class="font-weight-bold" style="color: #d50000;">Hapus Semua</span>
+        </div>
+        <span class="ml-2 mt-2 " style="font-size: 14px;">Jersey Basket</span>
+        <span class="ml-2 mt-2 " style="font-size: 14px;">Jersey Bola</span>
+        <span class="ml-2 mt-2 " style="font-size: 14px;">Jersey Badminton</span>
+
+        <span class="font-weight-bold title mt-2 mb-2">POPULER</span>
+
+        <div class="d-flex flex-wrap">
+          <button class="btn mr-2">Text Button</button>
+          <button class="btn mr-2">Text Button</button>
+          <button class="btn mr-2">Text Button</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ModalSearch -->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -88,7 +152,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-  <script src="./JavScript//script.js"></script>
+
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+
+  <script type="text/babel" src="./JavScript//script.jsx"></script>
 
 
 </body>
